--- a/app/views/admin/products/_form.html.slim
+++ b/app/views/admin/products/_form.html.slim
@@ -1,24 +1,8 @@
-= form_for @product do |f|
-  - if @product.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@product.errors.count, "error")} prohibited this product from being saved:"
-      ul
-        - @product.errors.full_messages.each do |message|
-          li = message
+= simple_form_for [:admin, @product] do |f|
+  = f.error_notification
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :price
-    = f.text_field :price
-  .field
-    = f.label :shop
-    = f.text_field :shop
-  .field
-    = f.label :image
-    = f.text_field :image
-  .field
-    = f.label :category
-    = f.text_field :category
-  .actions = f.submit
+  = f.input :name
+  = f.input :price
+  = f.input :category_id, collection: Category.pluck(:name, :id)
+
+  = f.button :submit, "Save"
