--- a/app/views/admin/products/index.html.slim
+++ b/app/views/admin/products/index.html.slim
@@ -1,12 +1,10 @@
 h1 Listing products
 
-table
+table.table.table-hover
   thead
     tr
       th Name
       th Price
-      th Shop
-      th Image
       th Category
       th
       th
@@ -17,13 +15,11 @@ table
       tr
         td = product.name
         td = product.price
-        td = product.shop
-        td = product.image
-        td = product.category
-        td = link_to 'Show', product
-        td = link_to 'Edit', edit_product_path(product)
-        td = link_to 'Destroy', product, data: { confirm: 'Are you sure?' }, method: :delete
+        td = product.category_name
+        td = link_to 'Show', [:admin, product]
+        td = link_to 'Edit', edit_admin_product_path(product)
+        td = link_to 'Destroy', [:admin, product], data: { confirm: 'Are you sure?' }, method: :delete
 
 br
 
-= link_to 'New Product', new_product_path
+= link_to 'New Product', new_admin_product_path
