--- a/app/views/layouts/admin/_navbar.html.slim
+++ b/app/views/layouts/admin/_navbar.html.slim
@@ -12,8 +12,14 @@ nav.navbar.navbar-default
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       ul.nav.navbar-nav
         li = link_to "Shops", admin_shops_path
-        li
-          a href="#"  Link
+        li.dropdown
+          = link_to admin_products_path, class: "dropdown-toggle", data: { toggle: "dropdown" }
+            | Products
+            '
+            span.caret
+          ul.dropdown-menu
+            li = link_to "Products", admin_products_path
+            li = link_to "Categories", admin_categories_path
         li.dropdown
           a.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button"
             | Dropdown
