--- a/app/views/layouts/admin/_navbar.html.slim
+++ b/app/views/layouts/admin/_navbar.html.slim
@@ -1,15 +1,13 @@
 nav.navbar.navbar-default
   .container
-    /! Brand and toggle get grouped for better mobile display
     .navbar-header
-      button.navbar-toggle.collapsed aria-expanded="false" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"
+      button.navbar-toggle.collapsed aria-expanded="false" data-target="#main-navbar" data-toggle="collapse" type="button"
         span.sr-only Toggle navigation
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand href="#"  Brand
-    /! Collect the nav links, forms, and other content for toggling
-    #bs-example-navbar-collapse-1.collapse.navbar-collapse
+      = link_to "WaiterApp", admin_shops_path, class: "navbar-brand"
+    #main-navbar.collapse.navbar-collapse
       ul.nav.navbar-nav
         li = link_to "Shops", admin_shops_path
         li.dropdown
@@ -20,27 +18,8 @@ nav.navbar.navbar-default
           ul.dropdown-menu
             li = link_to "Products", admin_products_path
             li = link_to "Categories", admin_categories_path
-        li.dropdown
-          a.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button"
-            | Dropdown
-            span.caret
-          ul.dropdown-menu
-            li
-              a href="#"  Action
-            li
-              a href="#"  Another action
-            li
-              a href="#"  Something else here
-            li.divider role="separator"
-            li
-              a href="#"  Separated link
-            li.divider role="separator"
-            li
-              a href="#"  One more separated link
-      form.navbar-form.navbar-left
-        .form-group
-          input.form-control placeholder="Search" type="text" /
-        button.btn.btn-default type="submit"  Submit
+        li = link_to "Users", admin_users_path
+
       ul.nav.navbar-nav.navbar-right
         li.dropdown
           a.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button"
@@ -56,5 +35,8 @@ nav.navbar.navbar-default
               a href="#"  Something else here
             li.divider role="separator"
             li = link_to "Logout", destroy_user_session_path, method: :delete
-    /! /.navbar-collapse
-  /! /.container-fluid
+      form.navbar-form.navbar-right
+        .form-group
+          input.form-control placeholder="Search" type="text" /
+        '
+        button.btn.btn-default type="submit"  Submit
