--- a/app/views/admin/products/index.html.slim
+++ b/app/views/admin/products/index.html.slim
@@ -1,24 +1,22 @@
 h1 Listing products
 
-table.table.table-hover
+table.table.table-hover.table-striped
   thead
     tr
-      th Name
-      th Price
-      th Category
-      th
+      th = Product.human_attribute_name(:name)
+      th = Product.human_attribute_name(:price)
+      th = Category.model_name.human
       th
       th
 
   tbody
     - @products.each do |product|
       tr
-        td = product.name
+        td = link_to product.name, admin_product_path(product)
         td = product.price
         td = product.category_name
-        td = link_to 'Show', [:admin, product]
-        td = link_to 'Edit', edit_admin_product_path(product)
-        td = link_to 'Destroy', [:admin, product], data: { confirm: 'Are you sure?' }, method: :delete
+        td = link_to fa_icon("pencil"), edit_admin_product_path(product), class: "btn btn-default btn-sm"
+        td = link_to fa_icon("trash"), [:admin, product], data: { confirm: 'Are you sure?' }, method: :delete, class: "btn btn-default btn-sm"
 
 br
 
