--- a/app/views/layouts/admin/_navbar.html.slim
+++ b/app/views/layouts/admin/_navbar.html.slim
@@ -9,16 +9,17 @@ nav.navbar.navbar-default
       = link_to "WaiterApp", admin_shops_path, class: "navbar-brand"
     #main-navbar.collapse.navbar-collapse
       ul.nav.navbar-nav
-        li = link_to "Shops", admin_shops_path
+        li = link_to t("activerecord.models.shop"), admin_shops_path
+        li = link_to t("activerecord.models.order"), admin_orders_path
         li.dropdown
           = link_to admin_products_path, class: "dropdown-toggle", data: { toggle: "dropdown" }
-            | Products
+            = t("activerecord.models.product")
             '
             span.caret
           ul.dropdown-menu
-            li = link_to "Products", admin_products_path
-            li = link_to "Categories", admin_categories_path
-        li = link_to "Users", admin_users_path
+            li = link_to t("activerecord.models.product"), admin_products_path
+            li = link_to t("activerecord.models.category"), admin_categories_path
+        li = link_to t("activerecord.models.user"), admin_users_path
 
       ul.nav.navbar-nav.navbar-right
         li.dropdown
