add more detail product

--- a/app/views/admin/products/_form.html.slim
+++ b/app/views/admin/products/_form.html.slim
@@ -4,5 +4,11 @@
   = f.input :name
   = f.input :price
   = f.input :category_id, collection: Category.pluck(:name, :id)
+  = f.input :description
+  = f.input :sku
+  = f.input :barcode
+  = f.input :image, as: :file
 
-  = f.button :submit, "Save"
+  = f.button :submit
+  '
+  = link_to t("global.back"), admin_products_path, class: "btn btn-default"
