--- a/app/assets/stylesheets/admin/admin.scss
+++ b/app/assets/stylesheets/admin/admin.scss
@@ -1,3 +1,11 @@
+/*
+ *= require_self
+*/
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+
+body {
+  padding-bottom: 60px;
+}
