--- a/app/views/layouts/app/base.html.slim
+++ b/app/views/layouts/app/base.html.slim
@@ -1,6 +1,15 @@
 doctype html
-html
+html lang="en"
   head
     title WaiterApp
+    meta charset="utf-8"
+    meta http-equiv="x-ua-compatible" content="ie=edge"
+    meta name="viewport" content="width=device-width, initial-scale=1"
   body
     = yield
+
+    css:
+      body, html {
+        padding: 0;
+        margin: 0;
+      }
