--- a/app/views/pages/app.html.slim
+++ b/app/views/pages/app.html.slim
@@ -3,6 +3,7 @@
 = javascript_pack_tag "application"
 
 javascript:
+  var swName = "#{asset_path('serviceworker')}"
   if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register("#{asset_path('serviceworker')}")
+    navigator.serviceWorker.register(swName)
   }
